test/src/e2e_vm_tests/test_programs/should_pass/dca/constant_while/src/main.sw
script;

const COND = false;

fn main() {
    while COND { }
}
