test/src/e2e_vm_tests/test_programs/should_fail/var_after_const_with_same_name/src/main.sw
script;

const X = 5;

fn main() -> u64 {
    let X = 5;
    X
}
